# pass24-parcer-all

./: .cursorignore  .env.example  .gitignore  AGENTS.md  pyproject.toml  run_test.py
.github/workflows/: cleanup-leads.yml  parse-leads.yml
agent_docs/: architecture.md  cross-repo-integration.md  data-sources.md  development-history.md  index.md  pipeline.md
data/: parser.sqlite  seed_urls.txt
docs/: АВТОПАРСЕР — ИНСТРУКЦИЯ.md
scripts/: delete_no_contact_leads.py
src/pass24_parser/: __init__.py  __main__.py  cli.py  config.py  deduplicator.py  enricher.py  http_client.py  models.py  normalizer.py  qualifier.py  storage.py
src/pass24_parser/collectors/: __init__.py  base.py  ddg_search.py  egrul_dadata.py  seed_urls.py  twogis.py  website_scraper.py
src/pass24_parser/exporters/: __init__.py  ai_sales.py  bitrix24.py  bitrix24_api.py
tests/: conftest.py  test_normalizer.py  test_qualifier.py  test_relevance.py  test_scraper.py
